# ChangeLog for dev-ruby/joyride-rails
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Apr 2013; Hans de Graaff <graaff@gentoo.org> joyride-rails-0.0.14.ebuild:
  Add proper dependencies.

*joyride-rails-0.0.14 (10 Apr 2013)

  10 Apr 2013; Hans de Graaff <graaff@gentoo.org> +joyride-rails-0.0.14.ebuild,
  +metadata.xml:
  Initial import.
