@@ -27,13 +27,16 @@ KEYWORDS="~amd64"
 IUSE=""
 
 ruby_add_rdepend "
-	>=dev-ruby/bourbon-2.0
+	>=dev-ruby/bourbon-3.0
 	dev-ruby/jquery-rails
 	>=dev-ruby/rails-3.1 =dev-ruby/rails-3*
-	>=dev-ruby/sass-3.1  =dev-ruby/sass-3*"
+	>=dev-ruby/sass-3.2  =dev-ruby/sass-3*"
 
 all_ruby_prepare() {
 	# Remove haml dependency since it is not a runtime dependency and I
 	# don't use it.
 	sed -i '/haml/d' ${RUBY_FAKEGEM_GEMSPEC} || die
+
+	# Move bourbon dependency to 3.0 to work with sass 3.2.
+	sed -i 's/2.0/3.0/' ${RUBY_FAKEGEM_GEMSPEC} || die
 }
